api/crates/postgres/tests/integration/tags/snapshots/integration__tags__delete_by_id__node_with_recursive_succeeds.snap
---
source: crates/postgres/tests/integration/tags/delete_by_id.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "descendant_id",
  "distance"
FROM
  "tag_paths"
WHERE
  "ancestor_id" = $1
ORDER BY
  "ancestor_id" ASC,
  "descendant_id" ASC
FOR UPDATE'''
rows_affected = 7
rows_returned = 7

[[queries]]
sql = '''
DELETE FROM
  "tags"
WHERE
  "id" IN ($1, $2, $3, $4, $5, $6, $7)'''
rows_affected = 7
rows_returned = 0

[[queries]]
sql = 'COMMIT'
rows_affected = 0
rows_returned = 0

[[queries]]
sql = '''
SELECT
  "descendant_id",
  "distance"
FROM
  "tag_paths"
WHERE
  "ancestor_id" = $1
ORDER BY
  "ancestor_id" ASC,
  "descendant_id" ASC
FOR UPDATE'''
rows_affected = 0
rows_returned = 0

[[queries]]
sql = '''
DELETE FROM
  "tags"
WHERE
  $1 = $2'''
rows_affected = 0
rows_returned = 0

[[queries]]
sql = 'COMMIT'
rows_affected = 0
rows_returned = 0
