api/crates/postgres/tests/integration/tags/snapshots/integration__tags__delete_by_id__root_without_recursive_fails.snap
---
source: crates/postgres/tests/integration/tags/delete_by_id.rs
expression: ctx.queries()
---
queries = []
